# 3dEarthRenderOpenGL

./: CMakeLists.txt  hw3
res/: cubemap_down.ppm  cubemap_east.ppm  cubemap_north.ppm  cubemap_south.ppm  cubemap_up.ppm  cubemap_west.ppm  heightmap.pgm  texturemap.ppm
